change AnalysisResult to record